tests/models/struct/unnamed/u32/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    u32
);
fn main() {}
